@@ -1323,31 +1323,51 @@ protected:
     GUI::Input *name;
 public:
     SaveDialog(GUI::Screen *parent, int x, int y, const char *title) :
-        ToplevelWindow(parent, x, y, 400, 130 + GUI::titlebar_y_stop, title) {
-        new GUI::Label(this, 5, 10, "Enter filename for configuration file:");
+        ToplevelWindow(parent, x, y, 620, 160 + GUI::titlebar_y_stop, title) {
+        new GUI::Label(this, 5, 10, "Enter filename for the configuration file to save to:");
         name = new GUI::Input(this, 5, 30, width - 10 - border_left - border_right);
-        extern std::string capturedir;
-        std::string fullpath,file;
-        Cross::GetPlatformConfigName(file);
-        const size_t last_slash_idx = capturedir.find_last_of("\\/");
-        if (std::string::npos != last_slash_idx) {
-            fullpath = capturedir.substr(0, last_slash_idx);
-            fullpath += CROSS_FILESPLIT;
-            fullpath += file;
-        } else
+        std::string fullpath;
+        if (control->configfiles.size())
+            fullpath = control->configfiles[0];
+        else
             fullpath = "dosbox-x.conf";
         name->setText(fullpath.c_str());
-        saveall = new GUI::Checkbox(this, 5, 60, "Save all options to the configuration file");
+        (new GUI::Button(this, 5, 60, "Use primary config file", 200))->addActionHandler(this);
+        (new GUI::Button(this, 210, 60, "Use portable config file", 210))->addActionHandler(this);
+        (new GUI::Button(this, 425, 60, "Use user config file", 180))->addActionHandler(this);
         Section_prop * section=static_cast<Section_prop *>(control->GetSection("dosbox"));
+        saveall = new GUI::Checkbox(this, 5, 95, "Save all config options to the configuration file");
         saveall->setChecked(section->Get_bool("show advanced options"));
-        (new GUI::Button(this, 120, 90, "Cancel", 70))->addActionHandler(this);
-        (new GUI::Button(this, 210, 90, "OK", 70))->addActionHandler(this);
+        (new GUI::Button(this, 220, 120, "OK", 70))->addActionHandler(this);
+        (new GUI::Button(this, 310, 120, "Cancel", 70))->addActionHandler(this);
     }
 
     void actionExecuted(GUI::ActionEventSource *b, const GUI::String &arg) {
         (void)b;//UNUSED
-        // HACK: Attempting to cast a String to void causes "forming reference to void" errors when building with GCC 4.7
-        (void)arg.size();//UNUSED
+        if (arg == "Use portable config file") {
+            name->setText("dosbox-x.conf");
+            return;
+        }
+        if (arg == "Use primary config file") {
+            if (control->configfiles.size())
+                name->setText(control->configfiles[0]);
+            return;
+        }
+        if (arg == "Use user config file") {
+            std::string config_path;
+            Cross::GetPlatformConfigDir(config_path);
+            std::string fullpath,file;
+            Cross::GetPlatformConfigName(file);
+            const size_t last_slash_idx = config_path.find_last_of("\\/");
+            if (std::string::npos != last_slash_idx) {
+                fullpath = config_path.substr(0, last_slash_idx);
+                fullpath += CROSS_FILESPLIT;
+                fullpath += file;
+            } else
+                fullpath = file;
+            name->setText(fullpath);
+            return;
+        }
         if (arg == "OK") control->PrintConfig(name->getText(), saveall->isChecked()?1:-1);
         close();
         if(shortcut) running=false;
@@ -1363,8 +1383,8 @@ public:
         new GUI::Label(this, 5, 10, "Enter filename for language file:");
         name = new GUI::Input(this, 5, 30, width - 10 - border_left - border_right);
         name->setText("messages.txt");
-        (new GUI::Button(this, 120, 60, "Cancel", 70))->addActionHandler(this);
-        (new GUI::Button(this, 210, 60, "OK", 70))->addActionHandler(this);
+        (new GUI::Button(this, 120, 60, "OK", 70))->addActionHandler(this);
+        (new GUI::Button(this, 210, 60, "Cancel", 70))->addActionHandler(this);
     }
 
     void actionExecuted(GUI::ActionEventSource *b, const GUI::String &arg) {
@@ -1998,7 +2018,7 @@ public:
         } else if (arg == "CD-ROM Support") {
             new GUI::MessageBox2(getScreen(), 20, 50, 640, "CD-ROM Support", MSG_Get("PROGRAM_INTRO_CDROM"));
         } else if (arg == "Save...") {
-            new SaveDialog(getScreen(), 90, 100, "Save Configuration...");
+            new SaveDialog(getScreen(), 50, 100, "Save Configuration...");
         } else if (arg == "Save Language File...") {
             new SaveLangDialog(getScreen(), 90, 100, "Save Language File...");
         } else {
